--- a/deis-lite/manifests/deis-database-rc.yaml
+++ b/deis-lite/manifests/deis-database-rc.yaml
@@ -27,7 +27,7 @@ spec:
             - containerPort: 5432
           volumeMounts:
             - name: postgresql-data
-              mountPath: /var/lib/postgresql/data
+              mountPath: /app/data
       volumes:
         - name: postgresql-data
           hostPath:
