--- a/odoo/manifests/odoo-rc.yaml
+++ b/odoo/manifests/odoo-rc.yaml
@@ -2,41 +2,42 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: odoo
+  labels:
+    name: odoo
+    heritage: helm
 spec:
   replicas: 1
   selector:
-    app: odoo
-    role: frontend
+    name: odoo
   template:
     metadata:
       labels:
-        app: odoo
-        role: frontend
+        name: odoo
     spec:
       containers:
-      - name: odoo
-        image: odoo:9
-        env:
-          - name: DB_ENV_POSTGRES_USER
-            value: "odoo"
-          - name: DB_ENV_POSTGRES_PASSWORD
-            value: "test123"
-        ports:
-        - containerPort: 8069
-          hostPort: 8069
-        # Mount volume/s into pod
-        volumeMounts:
-          # must match the name of the volume name below
-          - name: custom-addons
-            # mount path within the container
-            mountPath: /mnt/extra-addons
-          - name: var-lib-odoo
-            mountPath: /var/lib/odoo
-      # volumes to be mounted to containers
+        - name: odoo
+          image: odoo:9.0
+          env:
+            - name: DB_PORT_5432_TCP_ADDR
+              value: "pg-odoo"
+            - name: DB_PORT_5432_TCP_PORT
+              value: "5432"
+            - name: DB_ENV_POSTGRES_USER
+              value: "odoo"
+            - name: DB_ENV_POSTGRES_PASSWORD
+              value: "test123"
+          ports:
+            - containerPort: 8069
+              hostPort: 8069
+#          volumeMounts:
+#            - name: custom-addons
+#              mountPath: /mnt/extra-addons
+#            - name: var-lib-odoo
+#              mountPath: /var/lib/odoo
       volumes:
-      - name: custom-addons
+        - name: custom-addons
           hostPath:
             path: /data/odoo/extra-addons
-      - name: var-lib-odoo
+        - name: var-lib-odoo
           hostPath:
             path: /data/odoo/var-lib-odoo
