--- a/odoo/manifests/odoo-svc.yaml
+++ b/odoo/manifests/odoo-svc.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: odoo
   labels:
     name: odoo
-  name: odoo
+    heritage: helm
 spec:
   ports:
-  # the port that this service should serve on
-  - port: 8069
-    targetPort: 8069
-  # Label keys and values that must match in order to receive traffic for this service.
+    - port: 8069
   selector:
-    app: odoo
-    role: frontend
+    name: odoo
