--- a/odoo/manifests/postgres-svc.yaml
+++ b/odoo/manifests/postgres-svc.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: pg-odoo
   labels:
-    name: postgres
-  name: postgres
+    name: pg-odoo
+    heritage: helm
 spec:
   ports:
-  # the port that this service should serve on
-  - port: 5432
-    targetPort: 5432
-  # Label keys and values that must match in order to receive traffic for this service.
+    - port: 5432
   selector:
-    app: postgres
-    role: backend
+    name: pg-odoo
