--- a/deis-lite/manifests/deis-etcd-discovery-rc.yaml
+++ b/deis-lite/manifests/deis-etcd-discovery-rc.yaml
@@ -14,10 +14,14 @@ spec:
       labels:
         name: deis-etcd-discovery
     spec:
+      volumes:
+        - name: discovery-token
+          secret:
+            secretName: deis-etcd-discovery-token
       containers:
         - name: deis-etcd-discovery
-          image: quay.io/deisci/etcd:v2-alpha
-          imagePullPolicy: Always
+          image: quay.io/deis/etcd:2.0.0-alpha
+          imagePullPolicy: IfNotPresent
           command:
             - /usr/local/bin/discovery
           ports:
@@ -39,7 +43,3 @@ spec:
             - name: discovery-token
               readOnly: true
               mountPath: /var/run/secrets/deis/etcd/discovery
-      volumes:
-        - name: discovery-token
-          secret:
-            secretName: deis-etcd-discovery-token
