--- a/deis-lite/manifests/deis-etcd-rc.yaml
+++ b/deis-lite/manifests/deis-etcd-rc.yaml
@@ -16,15 +16,13 @@ spec:
     spec:
       containers:
         - name: deis-etcd-1
-          image: quay.io/deisci/etcd:v2-alpha
-          imagePullPolicy: Always
+          image: quay.io/deis/etcd:2.0.0-alpha
+          imagePullPolicy: IfNotPresent
           env:
             - name: DEIS_ETCD_CLUSTER_SIZE
               value: "1"
             - name: ETCD_NAME
               value: deis1
-            - name: ETCD_DATA_DIR
-              value: "/var/lib/etcd2"
             - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
