Updated Deis-Lite chart workflow rc

--- a/deis-lite/manifests/deis-workflow-rc.yaml
+++ b/deis-lite/manifests/deis-workflow-rc.yaml
@@ -26,6 +26,8 @@ spec:
           ports:
             - containerPort: 8000
               name: http
+              # expose port to node to make workflow to be accessable from
+              hostPort: 8000
           volumeMounts:
             - mountPath: /var/run/docker.sock
               name: docker-socket
