--- a/deis-lite/manifests/deis-workflow-rc.yaml
+++ b/deis-lite/manifests/deis-workflow-rc.yaml
@@ -26,7 +26,7 @@ spec:
           ports:
             - containerPort: 8000
               name: http
-              # expose port to node to make workflow to be accessable from
+              # expose port to node to make workflow to be accessable from host
               hostPort: 8000
           volumeMounts:
             - mountPath: /var/run/docker.sock
