--- a/wordpress/manifests/wordpress-rc.yaml
+++ b/wordpress/manifests/wordpress-rc.yaml
@@ -3,16 +3,15 @@ kind: ReplicationController
 metadata:
   name: wordpress
   labels:
-    name: wordpress
     heritage: helm
 spec:
   replicas: 1
   selector:
-    name: wordpress
+    app: wordpress
   template:
     metadata:
       labels:
-        name: wordpress
+        app: wordpress
     spec:
       containers:
         - name: wordpress
@@ -22,6 +21,7 @@ spec:
               value: test123
           ports:
           - containerPort: 80
+            name: http
           volumeMounts:
             - name: var-www-html
               mountPath: /var/www/html
