--- a/wordpress/manifests/wordpress-svc.yaml
+++ b/wordpress/manifests/wordpress-svc.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: wpfrontend
   labels:
-    name: wpfrontend
     heritage: helm
 spec:
   ports:
-    - port: 80
+    - name: http
+      port: 80
   selector:
-    name: wordpress
+    app: wordpress
