--- a/weavescope/manifests/scope-probe-ds.yaml
+++ b/weavescope/manifests/scope-probe-ds.yaml
@@ -16,18 +16,16 @@ spec:
       containers:
       - name:  weave-scope-probe
         image: weaveworks/scope:0.11.1
-        # uncomment the line below and comment the line one after if your Docker bridge interface is cbr0, and also uncomment env: part too
-#        command: ["/home/weave/entrypoint.sh", "--no-app", "--probe.docker.bridge", "cbr0", "--probe.docker", "true", "--probe.proc.root", "weave-scope-app"]
-        command: ["/home/weave/entrypoint.sh", "--no-app", "--probe.docker", "true", "--probe.kubernetes", "true", "weave-scope-app"]
+        # Replace cbr0 by docker0 if you don't use a kubernetes-specific bridge
+        command: ["/home/weave/entrypoint.sh", "--no-app", "--probe.docker.bridge", "cbr0", "--probe.docker", "true", "--probe.proc.root", "weave-scope-app"]
         securityContext:
           privileged: true
         resources:
           limits:
             cpu: 50m
-#        env:
-#        - name: "DOCKER_BRIDGE"
-#          value: "cbr0"
-#          value: "docker0"
+        env:
+        - name: "DOCKER_BRIDGE"
+          value: "cbr0"
         volumeMounts:
         - name: docker-sock
           mountPath: /var/run/docker.sock
