weavescope: Run the probe in the host PID and Network namespaces

--- a/weavescope/manifests/scope-probe-ds.yaml
+++ b/weavescope/manifests/scope-probe-ds.yaml
@@ -13,11 +13,26 @@ spec:
         heritage: helm
         k8s-app:  weave-scope-probe
     spec:
+      hostPID: true
+      hostNetwork: true
       containers:
       - name:  weave-scope-probe
         image: weaveworks/scope:0.11.1
         # Replace cbr0 by docker0 if you don't use a kubernetes-specific bridge
-        command: ["/home/weave/entrypoint.sh", "--no-app", "--probe.docker.bridge", "cbr0", "--probe.docker", "true", "--probe.proc.root", "weave-scope-app"]
+        command: ["/home/weave/entrypoint.sh", "--no-app", "--probe.docker.bridge", "cbr0", "--probe.docker", "true", "--probe.proc.root",
+                  # We cannot refer to the Scope App with its Kubernetes Service
+                  # DNS name (weave-scope-app) directly because Docker doesn't
+                  # allow customizing the DNS servers (the Kubernetes DNS add-on
+                  # server in this case) of a container when it runs in the
+                  # host's network namespace (see
+                  # https://github.com/docker/docker/issues/10384#issuecomment-72069550
+                  # ). Instead, we use variable expansion on its service
+                  # environment variables.
+                  #
+                  # NOTE: Unfortunately this imposes a specific creation
+                  # ordering since the Scope App Service needs to be created first for
+                  # the service environment variables below to be accesible.
+                  "$(WEAVE_SCOPE_APP_SERVICE_HOST):$(WEAVE_SCOPE_APP_SERVICE_PORT)"]
         securityContext:
           privileged: true
         resources:
