--- a/weavescope/manifests/scope-probe-ds.yaml
+++ b/weavescope/manifests/scope-probe-ds.yaml
@@ -18,29 +18,35 @@ spec:
       containers:
       - name:  weave-scope-probe
         image: weaveworks/scope:0.11.1
-        # Replace cbr0 by docker0 if you don't use a kubernetes-specific bridge
-        command: ["/home/weave/entrypoint.sh", "--no-app", "--probe.docker.bridge", "cbr0", "--probe.docker", "true", "--probe.proc.root",
-                  # We cannot refer to the Scope App with its Kubernetes Service
-                  # DNS name (weave-scope-app) directly because Docker doesn't
-                  # allow customizing the DNS servers (the Kubernetes DNS add-on
-                  # server in this case) of a container when it runs in the
-                  # host's network namespace (see
-                  # https://github.com/docker/docker/issues/10384#issuecomment-72069550
-                  # ). Instead, we use variable expansion on its service
-                  # environment variables.
-                  #
-                  # NOTE: Unfortunately this imposes a specific creation
-                  # ordering since the Scope App Service needs to be created first for
-                  # the service environment variables below to be accesible.
-                  "$(WEAVE_SCOPE_APP_SERVICE_HOST):$(WEAVE_SCOPE_APP_SERVICE_PORT)"]
+        args:
+        - --no-app
+        # Remove argument below if you don't use a kubernetes-specific Docker bridge (cbr0)
+        - --probe.docker.bridge=cbr0
+        - --probe.docker=true
+        - --probe.kubernetes=true
+        # Uncomment and customize argument below if your API service is not at http://localhost:8080
+        # Service accounts and service tokens are not supported yet (https://github.com/weaveworks/scope/issues/717)
+        # - --probe.kubernetes.api=http://yourapiserver:port
 
-                  # If you have a scope.weave.works account and want to run
-                  # Scope in Cloud Service Mode, comment out the line above and
-                  # uncomment the line below, replacing "foo" with the Service
-                  # token which you will obtain when logging in to your
-                  # scope.weave.works account:
-                  #
-                  # "--probe.token=foo" ]
+        # We cannot refer to the Scope App with its Kubernetes Service
+        # DNS name (weave-scope-app) directly because Docker doesn't
+        # allow customizing the DNS servers (the Kubernetes DNS add-on
+        # server in this case) of a container when it runs in the
+        # host's network namespace (see
+        # https://github.com/docker/docker/issues/10384#issuecomment-72069550
+        # ). Instead, we use variable expansion on its service
+        # environment variables.
+        #
+        # NOTE: Unfortunately this imposes a specific creation
+        # ordering since the Scope App Service needs to be created first for
+        # the service environment variables below to be accesible.
+        - "$(WEAVE_SCOPE_APP_SERVICE_HOST):$(WEAVE_SCOPE_APP_SERVICE_PORT)"
+        # If you have a scope.weave.works account and want to run
+        # Scope in Cloud Service Mode, comment out the argument above and
+        # uncomment the argument below, replacing "foo" with the Service
+        # token which you will obtain when logging in to your
+        # scope.weave.works account:
+        # - --probe.token=foo
         securityContext:
           privileged: true
         resources:
