--- a/weavescope/manifests/scope-app-rc.yaml
+++ b/weavescope/manifests/scope-app-rc.yaml
@@ -14,9 +14,10 @@ spec:
     spec:
       containers:
       - name: weave-scope-app
-        image: weaveworks/scope:0.11.1
+        image: weaveworks/scope:0.13.1
         args:
         - --no-probe
+        - --app.weave.addr=
         ports:
         - containerPort: 4040
           hostPort: 4040
